# meshes

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
editor/: Cargo.toml
editor/src/: main.rs
examples/: 2d.rs  3d.rs  simple.rs
src/: builder.rs  fill.rs  index_type.rs  indices.rs  lib.rs  mesh.rs  path.rs  stroke.rs  vertices.rs
src/mesh/: indices.rs  iter.rs  mod.rs  normals.rs  operator.rs  optimize.rs  shapes.rs  vertices.rs
src/mesh/backend_bevy/: mod.rs
src/mesh/geometry/: line.rs  mod.rs  triangle.rs
src/mesh/lyon/: builder.rs  fill.rs  mod.rs  stroke.rs
src/mesh/meshopt/: analysis.rs  mod.rs  optimize.rs  util.rs
