[package]
name = "bevy_procedural_meshes"
description = "Procedural Meshes for the Bevy game engine."
version = "0.1.2"
edition = "2021"
categories = ["graphics", "rendering", "game-development"]
keywords = ["gamedev", "graphics", "bevy", "procedural", "meshes"]
homepage = "https://bevy-procedural.org/meshes"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bevy-procedural/meshes"
documentation = "https://docs.rs/bevy_procedural_meshes"
rust-version = "1.76.0"

[lib]
name = "bevy_procedural_meshes"
path = "src/lib.rs"
crate-type = ["rlib"]

[workspace]
members = ["editor"]

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
map_flatten = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"

[lints]
workspace = true

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
] }
bevy-inspector-egui = { version = "0.23.2", optional = true }
lyon = { version = "1.0.1", optional = true }
memoffset = "0.9.0"
meshopt = { version = "0.2.0", optional = true }

[features]
default = ["lyon", "meshopt"]
fast-dev = ["bevy/dynamic_linking", "bevy-inspector-egui"]
meshopt = ["dep:meshopt"]
lyon = ["dep:lyon"]

[[example]]
name = "2d"
path = "examples/2d.rs"
doc-scrape-examples = true
required-features = ["bevy/bevy_winit", "bevy/bevy_sprite"]

[[example]]
name = "3d"
path = "examples/3d.rs"
doc-scrape-examples = true
required-features = [
    "bevy/bevy_winit",
    "bevy/bevy_pbr",
    "bevy/tonemapping_luts",
]

# Enable a small amount of optimization in debug mode
[profile.fast-dev]
inherits = "dev"
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.fast-dev.package."*"]
inherits = "dev"
opt-level = 3

[profile.fast-dev.package.gfx-backend-vulkan]
inherits = "dev"
opt-level = 3
debug-assertions = false

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
