[package]
name = "editor"
description = "An Egui-based editor for the bevy_procedural_meshes crate"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = { version = "0.13.0", features = ["file_watcher", "bevy_sprite"] }
bevy-inspector-egui = "0.23.2"
bevy_panorbit_camera = { version = "0.15.0", features = ["bevy_egui"] }

[dependencies.bevy_procedural_meshes]
path = "../"
features = ["dynamic", "meshopt", "inspector", "lyon"]

[package.metadata]
hot_reload_features = ["bevy/dynamic_linking", "bevy/embedded_watcher"]

# Enable a small amount of optimization in debug mode
[profile.fast-dev]
inherits = "dev"
opt-level = 1
