[package]
name = "editor"
description = "An Egui-based editor for the bevy_procedural_meshes crate"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = { version = "^0.14.0", default-features = false, features = [
    "bevy_sprite",
    "bevy_winit",
    "tonemapping_luts",
    "bevy_pbr",
] }
bevy-inspector-egui = "^0.25.0"
bevy_panorbit_camera = { version = "^0.19.0", features = ["bevy_egui"] }

[dependencies.bevy_procedural_meshes]
path = "../"
features = ["dynamic", "meshopt", "inspector", "lyon"]

# Enable a small amount of optimization in debug mode
[profile.fast-dev]
inherits = "dev"
opt-level = 1
